--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha",
     "build": "babel src --out-dir dist",
     "clean": "rm -rf dist/*",
-    "prepublish": "npm run clean && npm run build"
+    "prepublish": "npm run clean && npm run build",
+    "publish": "npm run prepublish && git add . && git commit -m"
   },
   "repository": {
     "type": "git",
