--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/Peerby/s3Uploader",
   "dependencies": {
-    "jquery": "2.1.4",
+    "jquery": "^3.3.1",
     "underscore": "1.8.3"
   }
 }
